[metadata]
name = ohdl
author = taoliv
author_email = 3209796726@qq.com
description = 
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = 

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    importlib-metadata; python_version<"3.8"
    requests>=2.22

[options.entry_points]
console_scripts =
    ohdl = ohdl.cli:main

[options.extras_require]

[options.packages.find]
where = src
exclude =
    tests*